@@ -1,3 +1,7 @@
+2015-03-31  Mark Wielaard  <mjw@redhat.com>
+
+       * core-file.c (core_file_read_eagerly): Special case small images.
+
 2015-01-26  Mark Wielaard  <mjw@redhat.com>
 
 	* dwfl_module_getdwarf.c (find_symtab): Explicitly clear symdata,
